--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,5 @@ pagetop-mdbook = { path = "../pagetop-mdbook", version = "0.0" }
 maud = "0.24.0"
 
 [build-dependencies]
-pagetop = { path = "../PageTop/pagetop", version = "0.0" }
+pagetop-build = { path = "../PageTop/pagetop-build", version = "0.0" }
 pagetop-mdbook = { path = "../pagetop-mdbook", version = "0.0" }
