🔖 Libera versión de desarrollo 0.0.4

--- a/config/default.toml
+++ b/config/default.toml
@@ -3,6 +3,7 @@ name = "PageTop WebSite"
 description = """\
     The definitive PageTop Guide for PageTop Users.\
 """
+theme = "Bootsier"
 language = "es-ES"
 
 [log]
