--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pagetop-website"
-version = "0.0.3"
+version = "0.0.4"
 edition = "2021"
 
 authors = [
@@ -17,6 +17,7 @@ license = "Apache-2.0 OR MIT"
 actix-web = "4.2.1"
 static-files = "0.2.3"
 pagetop = { path = "../PageTop/pagetop", version = "0.0" }
+pagetop-bootsier = { path = "../PageTop/pagetop-bootsier", version = "0.0" }
 pagetop-mdbook = { path = "../pagetop-mdbook", version = "0.0" }
 maud = "0.24.0"
 
