--- a/config/default.toml
+++ b/config/default.toml
@@ -4,6 +4,7 @@ description = "An opinionated Rust web framework to build secure and modular web
 #theme = "Basic"
 #theme = "Chassis"
 theme = "Inception"
+#theme = "Bootsier"
 
 [log]
 rolling = "Daily"
